# ka

./: .gitignore  2020-10-16.html  2020-10-18.html  2020-11-01.html  2020-11-05.html  Archive_plugin.html  Available_plugins.html  Backlog.html  Blog.html  Blog_plugin.html  Breadcrumb_stack.html  Browse_filesystem_hierarchy.html  CHANGELOG.md  CNAME  Calendar_plugin.html  Daily_notes.html  Filenames_as_title.html  Graph-view_plugin.html  Introducing_filesystem_hierarchy_support_in_Ka.html  Ka.html  Ka_inspired_neuron's_contextual_backlinks_feature.html  Ka_is_a_research_playground_for_neuron.html  Ka_is_future-proof.html  Ka_is_reactive.html  Markdown_notes_can_be_extended_without_compromising_simplicity.html  Multiple_notebooks.html  Personal_need.html  Plugins.html  README.md  Renaming_filenames_and_titles_together.html  Sidebar_listing.html  Spaced_repetition_plugin.html  Tasks_plugin.html  Telescope_plugin.html  Think_long-term_when_designing_plugins.html  Using_neuron_notes_with_Ka.html  VSCode_memo_extension.html  Wiki-links.html  ci.nix  default.nix  (+6 more)
.github/workflows/: ci.yaml  publish.yaml
dep/: README.md
dep/alga/: github.json
dep/clay/: github.json
dep/commonmark/: github.json
dep/commonmark-hs/: github.json
dep/gitignore/: github.json
dep/nixpkgs/: github.json
dep/obelisk/: github.json
dep/reflex-dom-pandoc/: github.json
dep/with-utf8/: github.json
doc/: index.md
guide/: 2020-10-16.md  2020-11-05.md  2020-11-14.md  Archive plugin.md  Available plugins.md  Backlog.md  Blog plugin.md  Blog.md  Breadcrumb stack.md  Calendar plugin.md  Daily notes.md  Filenames as title.md  Graph-view plugin.md  INDEX.md  Ka is a research playground for neuron.md  Ka is future-proof.md  Ka is reactive.md  Ka.md  Markdown notes can be extended without compromising simplicity.md  Multiple notebooks.md  Personal need.md  Plugins.md  Renaming filenames and titles together.md  Sidebar listing.md  Spaced repetition plugin.md  Tasks plugin.md  Telescope plugin.md  Think long-term when designing plugins.md  Using neuron notes with Ka.md  VSCode memo extension.md  Wiki-links.md  index.md  neuron.dhall
guide/.neuron/output/: index.html
guide/Blog/: Browse filesystem hierarchy.md  Introducing filesystem hierarchy support in Ka.md  Ka inspired neuron's backlinks surrounding context feature.md  Ka inspired neuron's contextual backlinks feature.md
guide/Daily/: 2020-10-16.md  2020-10-18.md  2020-11-01.md
nix/: sources.json
src/: Main.hs
src/Ka/: App.hs  Breadcrumb.hs  Database.hs  Diff.hs  Graph.hs  Markdown.hs  PandocView.hs  Plugin.hs  Route.hs  Scope.hs  ScopeView.hs  Sidebar.hs  Thing.hs  View.hs  Watch.hs
src/Ka/Plugin/: Backlinks.hs  Calendar.hs  Highlight.hs  Markdown.hs  Tag.hs  Task.hs  Telescope.hs  ViewGraph.hs  ViewNote.hs  WikiLink.hs
src/Ka/Sidebar/: Breadcrumb.hs  Listing.hs
tools/: today.sh
