cabal-version:      2.4

-- To format this file, run:
--   nix-shell --run 'cabal-fmt -i ka.cabal'
name:               ka
version:            0.1.0.0
homepage:           https://github.com/srid/ka
license:            AGPL-3.0-only
license-file:       LICENSE
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
category:           CLI
build-type:         Simple
extra-source-files: CHANGELOG.md

executable ka
  hs-source-dirs:     src
  main-is:            Main.hs
  build-depends:
    , base               ^>=4.13
    , commonmark
    , commonmark-pandoc
    , containers
    , data-default
    , directory
    , filepath
    , filepattern
    , fsnotify
    , pandoc-types
    , reflex
    , reflex-dom-pandoc  >=0.2.6.0
    , reflex-dom-core
    , reflex-fsnotify
    , relude             ^>=0.7.0.0
    , with-utf8

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

  default-extensions:
    DeriveFunctor
    DerivingStrategies
    FlexibleContexts
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    ViewPatterns

  other-modules:
    Ka.App
    Ka.Database
    Ka.Diff
    Ka.Markdown
    Ka.Plugin

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-language:   Haskell2010
