cabal-version:      3.0

-- To format this file, run:
--   nix-shell --run 'cabal-fmt -i ka.cabal'
name:               ka
version:            0.1.0.0
homepage:           https://github.com/srid/ka
license:            AGPL-3.0-only
license-file:       LICENSE
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
category:           CLI
build-type:         Simple
extra-source-files: CHANGELOG.md

executable ka
  hs-source-dirs:     src
  main-is:            Main.hs
  build-depends:
    , algebraic-graphs
    , base
    , clay
    , commonmark
    , commonmark-extensions
    , commonmark-pandoc
    , containers
    , constraints-extras
    , data-default
    , dependent-sum
    , dependent-sum-template
    , directory
    , filepath
    , filepattern
    , fsnotify
    , ghcjs-dom
    , lens
    , mtl
    , pandoc-types
    , parsec
    , reflex
    , reflex-dom
    , reflex-dom-core
    , reflex-dom-pandoc       >=0.7.0.0
    , reflex-fsnotify
    , relude                  >=0.7.0.0
    , shower
    , tagged
    , text
    , time
    , with-utf8

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Extra)

  default-extensions:
    DataKinds
    DeriveFunctor
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    ViewPatterns

  other-modules:
    Ka.App
    Ka.Graph
    Ka.Markdown
    Ka.PandocView
    Ka.Plugin.Backlinks
    Ka.Plugin.Calendar
    Ka.Plugin.Highlight
    Ka.Plugin.Tag
    Ka.Plugin.Task
    Ka.Plugin.Telescope
    Ka.Plugin.WikiLink
    Ka.Route
    Ka.Scope
    Ka.ScopeView
    Ka.Sidebar
    Ka.Sidebar.Breadcrumb
    Ka.Sidebar.Listing
    Ka.Thing
    Ka.View
    Ka.Watch

  ghc-options:
    -- -prof -fprof-auto -threaded -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -threaded -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-language:   Haskell2010
